--- a/app/views/teacher/lessons/edit.html.erb
+++ b/app/views/teacher/lessons/edit.html.erb
@@ -1,5 +1,6 @@
-<h1>New Lesson</h1>
+<h1>Editing Lesson</h1>
 
 <%= render 'form', lesson: @lesson %>
 
+<%= link_to 'Show', @lesson %> |
 <%= link_to 'Back', lessons_path %>
