--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
   <body>
     <main class="back-ground">
     <div class="navbar-fixed">
-      <nav class="black">
+      <nav class="brand-bg-grey">
         <div class="container">
           <div class="nav-wrapper">
             <a href="/" class="brand-logo">MUSE</a>
@@ -94,7 +94,7 @@
       <%= yield %>
     </div>
     </main>
-    <footer class="page-footer blue-grey darken-4">
+    <footer class="page-footer brand-bg-grey">
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
@@ -120,7 +120,7 @@
           </div>
         </div>
       </div>
-      <div class="footer-copyright black">
+      <div class="footer-copyright brand-bg-dark">
         <div class="container">
           © 2016 Muse Corp
         </div>
