--- a/app/views/teacher/homeworks/edit.html.erb
+++ b/app/views/teacher/homeworks/edit.html.erb
@@ -33,7 +33,7 @@
           <div class="col s10 offset-s1">
             <h5 class="button-spacing"><strong>Tasks for the homework</strong></h5>
             <div class="button-spacing">
-              <ul class="collection blue-grey darken-3">
+              <ul class="collection">
                 <%= f.fields_for :tasks do |task_form| %>
                   <li class="blue-grey darken-3">
                     <div class="input-field col s8">
