--- a/app/views/teacher/students/index.html.erb
+++ b/app/views/teacher/students/index.html.erb
@@ -1,6 +1,6 @@
 <h3 class="h-3-spacing center white-text">all of your wonderful students</h3>
 <div class="row">
-  <div class="col s6 offset-s2">
+  <div class="col s6">
     <%= link_to [:new, :teacher, :student],
                 class: "btn-floating waves-effect waves-light green" do %>
       <i class="material-icons">add</i>
@@ -10,8 +10,8 @@
 </div>
 <% current_user.students.each do | student | %>
   <div class="row">
-    <div class="col s10 offset-s1">
-      <div class="card-panel hoverable blue-grey darken-4">
+    <div class="col s12">
+      <div class="card-panel hoverable">
         <span class="">
           <blockquote class="">
             <h5 class="white-text"><%= student.name %></h5>
