--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col s10 offset-s1 home-card">
-    <div class="card blue-grey darken-4 hoverable">
+    <div class="card hoverable">
       <div class="card-content white-text">
         <h1 class="center">Muse</h1>
         <h4 class="center-align sub-title-weight">Making Private Lessons Easier!</h4>
