--- a/app/views/users/payment.html.erb
+++ b/app/views/users/payment.html.erb
@@ -1,12 +1,84 @@
-<!-- begin stripe form -->
-<%= form_tag users_pay_path do %>
-  <script
-    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-    data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-    data-name="Muse Subscription"
-    data-description="$5.00/mo"
-    data-locale="auto"
-    data-currency="cad">
-  </script>
+<!-- begin old stripe checkout -->
+  <!-- 
+  <%= form_tag users_pay_path do %>
+    <script
+      src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+      data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+      data-name="Muse Subscription"
+      data-description="$5.00/mo"
+      data-locale="auto"
+      data-allow-remember-me="false"
+      data-currency="cad">
+    </script>
+  <% end %>
+   -->
+<!-- end old stripe checkout -->
+
+<%= form_tag users_pay_path, :id => 'payment-form' do %>
+  <span class="payment-errors"></span>
+
+  <div class="form-row">
+    <label>
+      <span>Card Number</span>
+      <input type="text" size="20" data-stripe="number">
+    </label>
+  </div>
+
+  <div class="form-row">
+    <label>
+      <span>Expiration (MM/YY)</span>
+      <input type="text" size="2" data-stripe="exp_month">
+    </label>
+    <span> / </span>
+    <input type="text" size="2" data-stripe="exp_year">
+  </div>
+
+  <div class="form-row">
+    <label>
+      <span>CVC</span>
+      <input type="text" size="4" data-stripe="cvc">
+    </label>
+  </div>
+
+  <div class="form-row">
+    <label>
+      <span>Billing Zip</span>
+      <input type="text" size="6" data-stripe="address_zip">
+    </label>
+  </div>
+
+  <input type="submit" class="submit" value="Submit Payment">
 <% end %>
-<!-- end stripe form -->
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    Stripe.setPublishableKey('pk_test_Ns6tz2pvq3SLoaNI2pVZWh3A');
+
+    $('#payment-form').on('submit', function(ev){
+      ev.preventDefault();
+
+      $(this).find('.submit').prop('disabled', false);
+
+      Stripe.card.createToken($(this), stripeResponseHandler);
+    })
+
+    function stripeResponseHandler(status, response) {
+      var $form = $('#payment-form');
+
+      if (response.error) {
+
+        $.forms.find('.payment-errors').text(response.error.message);
+        $form.find('.submit').prop('disabled', false);
+
+      } else {
+
+        var token = response.id;
+
+        $form.append($('<input type="hidden" name="stripeToken">').val(token));
+
+        $form.get(0).submit();
+      }
+    };
+  });
+</script>
+<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
