--- a/app/views/teacher/homeworks/new.html.erb
+++ b/app/views/teacher/homeworks/new.html.erb
@@ -35,6 +35,31 @@
               placeholder: "This week I want to to spend time understanding..." %>
           </div>
         </div>
+        <div class="row">
+          <div class="col s10 offset-s1">
+            <h5 class="button-spacing"><strong>Tasks for the homework</strong></h5>
+            <div class="button-spacing">
+              <ul class="collection">
+                <%= f.fields_for :tasks do |task_form| %>
+                  <li class="blue-grey darken-3">
+                    <div class="input-field col s8">
+                      <%= task_form.label " ", class: "active" %>
+                      <%= task_form.text_field :item, class: "validate" %>
+                    </div>
+                    <div class="input-field col s4">
+                      <%= task_form.label " ", class: "active" %>
+                      <%= task_form.text_field :url, class: "validate" %>
+                    </div>
+                  </li>
+                <% end %>
+                <a onClick="teacher_new_homework_view.homeworkShowAddTask()",
+                   class="btn-floating waves-effect waves-light green" >
+                    <i class="material-icons">add</i>
+                </a>
+              </ul>
+            </div>
+          </div>
+        </div>
         <div class="center">
           <%= button_tag "Assign!", class: "btn waves-effect waves-light form-button green" %>
         </div>
@@ -42,3 +67,7 @@
     </div>
   </div>
 </div>
+
+<script>
+  teacher_new_homework_view = teacherHomeworkNew();
+</script>
