--- a/app/views/parent/lessons/index.html.erb
+++ b/app/views/parent/lessons/index.html.erb
@@ -20,7 +20,7 @@ $(document).on('turbolinks:load', function(){
     minTime: "12:00:00",
     allDaySlot: false,
     events: {
-      url: '/student/lessons.json',
+      url: '/parent/lessons.json',
       textColor: 'white'
     },
     theme: true,
@@ -30,14 +30,14 @@ $(document).on('turbolinks:load', function(){
 
   var nextPrev = {
     "border": "none",
-    "border-radius": "10px",
+    "border-radius": "3px",
     "margin-right": "0.5em",
     "background-color": "#A9ABAE"
   }
 
   var today = {
     "border": "none",
-    "border-radius": "10px",
+    "border-radius": "3px",
     "margin-right": "0.5em",
     "background-color": "#4385D8"
   }
