--- a/app/views/parent/lessons/show.html.erb
+++ b/app/views/parent/lessons/show.html.erb
@@ -20,5 +20,15 @@
   <%= @lesson.end_time %>
 </p>
 
-<%= link_to 'Edit', edit_teacher_lesson_path(@lesson) %> |
-<%= link_to 'Back', teacher_lessons_path %>
+<p>
+  <strong>User:</strong>
+  <%= @lesson.user_id %>
+</p>
+
+<p>
+  <strong>Teacher:</strong>
+  <%= @lesson.teacher_id %>
+</p>
+
+<%= link_to 'Edit', edit_lesson_path(@lesson) %> |
+<%= link_to 'Back', lessons_path %>
