--- a/app/views/teacher/lessons/new.html.erb
+++ b/app/views/teacher/lessons/new.html.erb
@@ -1,10 +1,15 @@
-<h1>New Lesson</h1>
+<h3 class="center h-3-spacing white-text">New Lesson</h3>
+<div class="col s6 offset-s2">
+  <%= link_to teacher_lessons_path,
+              class: "btn-floating waves-effect waves-light brand-bg-lt-grey" do %>
+     <i class="material-icons">skip_previous</i>
+  <% end %>
+  <span class="button-text white-text">back to calendar</span>
+</div>
 <div class="row">
-  <div class="col s10 offset-s1 white-text">
+  <div class="col m10 offset-m1 s12 white-text">
     <div class="card-panel hoverable">
       <%= render 'form', lesson: @lesson %>
     </div>
   </div>
 </div>
-
-<%= link_to 'Back', teacher_lessons_path %>
