--- a/app/views/teacher/homeworks/new.html.erb
+++ b/app/views/teacher/homeworks/new.html.erb
@@ -42,7 +42,7 @@
               <ul class="collection">
                 <%= f.fields_for :tasks do |task_form| %>
                   <li class="blue-grey darken-3">
-                    <div class="input-field col s8">
+                    <div class="input-field col s6">
                       <%= task_form.label " ", class: "active" %>
                       <%= task_form.text_field :item, class: "validate" %>
                     </div>
@@ -50,13 +50,19 @@
                       <%= task_form.label " ", class: "active" %>
                       <%= task_form.text_field :url, class: "validate" %>
                     </div>
+                    <div class="col s2 bottom">
+                      <a onClick="teacher_new_homework_view.RemoveTask(this)",
+                         class="btn-floating waves-effect waves-light red" >
+                          <i class="material-icons">cancel</i>
+                      </a>
+                    </div>
                   </li>
                 <% end %>
-                <a onClick="teacher_new_homework_view.homeworkShowAddTask()",
-                   class="btn-floating waves-effect waves-light green" >
-                    <i class="material-icons">add</i>
-                </a>
               </ul>
+              <a onClick="teacher_new_homework_view.AddTask()",
+                 class="row btn-floating waves-effect waves-light green" >
+                  <i class="material-icons">add</i>
+              </a>
             </div>
           </div>
         </div>
@@ -67,7 +73,3 @@
     </div>
   </div>
 </div>
-
-<script>
-  teacher_new_homework_view = teacherHomeworkNew();
-</script>
