--- a/app/views/teacher/students/show.html.erb
+++ b/app/views/teacher/students/show.html.erb
@@ -1,2 +1,34 @@
-<h1>Teacher::Students#show</h1>
-<p>Find me in app/views/teacher/students/show.html.erb</p>
+<h3 class="center h-3-spacing white-text">
+  Congrats, more business!<br>
+  <span class="title-comment thin">(and your parents said music was a dumb choice!)</span>
+</h3>
+
+
+
+<div class="row">
+  <div class="col s12 white-text card-bottom">
+    <%= form_for @student, url: teacher_students_path(@student), class: "card-padding" do |f| %>
+      <div class="card-panel hoverable">
+        <h5 class="center">Add the student</h5>
+        <div>
+          <%= f.label "Parent Name:" %>
+          <%= f.text_field :name %>
+        </div>
+        <div>
+          <%= f.label "Username:" %>
+          <%= f.text_field :username %>
+        </div>
+        <div>
+          <%= f.label "Password:" %>
+          <%= f.password_field :password %>
+        </div>
+      </div>
+      <div class="center button-spacing">
+        <%= button_tag class: "btn waves-effect waves-light green" do %>
+          Submit
+          <i class="material-icons right">send</i>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+</div>
