--- a/app/views/teacher/homeworks/new.html.erb
+++ b/app/views/teacher/homeworks/new.html.erb
@@ -39,7 +39,7 @@
           <div class="col s10 offset-s1">
             <h5 class="button-spacing"><strong>Tasks for the homework</strong></h5>
             <div class="button-spacing">
-              <ul class="collection">
+              <ul id="new-home-work-task-list" class="collection">
                 <%= f.fields_for :tasks do |task_form| %>
                   <li class="blue-grey darken-3">
                     <div class="input-field col s6">
