--- a/app/views/teacher/students/edit.html.erb
+++ b/app/views/teacher/students/edit.html.erb
@@ -1,6 +1,5 @@
 <h3 class="center h-3-spacing white-text">
-  Congrats, more business!<br>
-  <span class="title-comment thin">(and your parents said music was a dumb choice!)</span>
+  <span class="thin">Update</span> <%= @student.name %>
 </h3>
 <% if @student.errors.any? %>
   <div class="row">
@@ -22,16 +21,22 @@
   <div class="col s12 white-text card-bottom">
     <%= form_for @student, url: teacher_students_path(@student), class: "card-padding" do |f| %>
       <div class="card-panel hoverable">
-        <h5 class="center">Add the student</h5>
-        <div>
+        <h5 class="center">Edit <%= @student.name %>'s information'</h5>
+        <div class="row">
+          <div class="input-field right">
+             <%= f.check_box :archived?, class:"filled-in" %>
+             <%= f.label :archived? %>
+          </div>
+        </div>
+        <div class="input-field">
           <%= f.label "Parent Name:" %>
           <%= f.text_field :name %>
         </div>
-        <div>
+        <div class="input-field">
           <%= f.label "Username:" %>
           <%= f.text_field :username %>
         </div>
-        <div>
+        <div class="input-field">
           <%= f.label "Password:" %>
           <%= f.password_field :password %>
         </div>
