add ability for archived students to be viewed from button on teacher/students/index

--- a/app/views/teacher/students/archived_students.html.erb
+++ b/app/views/teacher/students/archived_students.html.erb
@@ -3,7 +3,7 @@
   <div class="col s6">
     <%= link_to teacher_students_path,
                 class: "btn-floating waves-effect waves-light brand-bg-lt-grey" do %>
-      <i class="material-icons">add</i>
+      <i class="material-icons">skip_previous</i>
     <% end %>
     <span class="button-text white-text">back to all students</span>
   </div>
