--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,14 +3,14 @@
   <head>
 
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="/stylesheets/normalize.css">
+    <!-- <link rel="stylesheet" href="/stylesheets/normalize.css">
     <link rel="stylesheet" href="/stylesheets/application.css">
-    <link type="text/css" rel="stylesheet" href="/stylesheets/materialize.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="/stylesheets/materialize.css"  media="screen,projection"/> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <!-- <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="/javascript/application.js"></script>
-    <script type="text/javascript" src="/javascript/materialize.js"></script>
+    <script type="text/javascript" src="/javascript/materialize.js"></script> -->
 
     <title>Muse</title>
     <%= csrf_meta_tags %>
@@ -122,12 +122,14 @@
                     <a href="<%= stripe_deauthorize_path %>">Disconnect Stripe</a>
                   <% else %>
                     <a href="<%= stripe_oauth_path %>">Connect Stripe</a>
-                  <% end %>    
+                  <% end %>
                   </li>
                 <% elsif current_user.role == 'P' %>
                   <%= render '/shared/cardform' %>
                 <% else %>
+                  <a href="<%= stripe_oauth_path %>">Connect Stripe</a>
                 <% end %>
+                </li>
               <% end %>
             </ul>
           </div>
